# vpassword

./: Cargo.toml  LICENSE  README.md
src/: main.rs
vpassword-agent/: Cargo.toml
vpassword-agent/src/: agent.rs  handlers.rs  main.rs  models.rs
vpassword-client/: Cargo.toml
vpassword-client/src/: cli.rs  config.rs  handlers.rs  main.rs  models.rs
vpassword-core/: Cargo.toml
vpassword-core/src/: encryption.rs  errors.rs  lib.rs  models.rs  vault.rs
