[package]
name = "vpassword"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
rand = "0.9.2"
aes-gcm = "0.10.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
base64 = "0.22.1"
thiserror = "2.0.17"
passwords = "3.1.16"
clap = { version = "4.5.51", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
color-eyre = "0.6.5"
