[workspace]
resolver = "3"
members = ["vpassword-agent", "vpassword-client", "vpassword-core"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Mohammad Varmazyari <mohammadvary@gmail.com>"]
license = "MIT"
repository = "https://github.com/mmdov/vpassword"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
zeroize = "1.8.2"

vpassword-core = { path = "./vpassword-core", version = "0.5.0" }
