[package]
name = "vpassword-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
vpassword-core.workspace = true

passwords = "3.1.16"
clap = { version = "4.5.51", features = ["derive"] }
rpassword = "7.4.0"

[[bin]]
name = "vpassword"
path = "src/main.rs"
