[package]
name = "vpassword-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
zeroize = { workspace = true, features = ["derive"] }

argon2 = "0.5.3"
rand = "0.9.2"
aes-gcm = "0.10.3"
serde = { version = "1.0.188", features = ["derive"] }
base64 = "0.22.1"
thiserror = "2.0.17"
